8139178: Wrong fontMetrics when printing in Landscape (OpenJDK)

Reviewed-by: prr